--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,74 @@
 /* list of classes used in HTML
 motto
-header.h1.h2
-footer
 bitmoji
+hunter
  */
 
-.bitmoji {
-    border-radius: 50% 50% 0 0;
+* {
+    /* display: flex; */
+    margin: 0;
+    padding: 0;
+    font-family: 'Bubblegum Sans', monospace, sans-serif, serif;
+    --UT: #dd6808;
+}
+
+header {
+    display: block;
+    background-color: var(--UT);
+    width: 100%;
+    height: 75px;}
+
+header h1 {
+    display: flex;
+    margin: 15px;
+    float: left;
+    text-align: center;
+}
+
+header h2 {
+    display: flex;
+    float: left;
+    margin: 10px 20px;
+    text-align: center;
+}
+
+nav {
+    float: right;
+    display: flex;
+    font-size: 25px;
+    padding-top: 20px;
+    padding-right: 20px;
+
+}
+
+nav a {
+    margin-left: 25px;
+
+}
+
+
+
+#bitmoji {
+    width: 200px;
+    border: 25px;
+    border-style: groove;
+    border-radius: 50%;
+    border-color: var(--UT);
+    align-items: end;
+    display: -webkit-box;
+    margin-left: auto;
+    margin-right: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+footer {
+    display: block;
+    text-align: center;
+    position: relative;
+    margin: 40px 40px 40px 40px;
+}
+
+#motto {
+    text-align: center;
 }
