--- a/assets/style.css
+++ b/assets/style.css
@@ -32,21 +32,31 @@ header h2 {
     text-align: center;
 }
 
-nav {
+/* nav {
     float: right;
     display: flex;
     font-size: 25px;
     padding-top: 20px;
     padding-right: 20px;
 
-}
+} */
 
-nav a {
+nav a.topnav {
     margin-left: 25px;
-
+    float: right;
+    display: flex;
+    font-size: 25px;
+    padding-top: 20px;
+    padding-right: 20px;
 }
 
-
+nav a.bottnav {
+    text-align: center;
+    margin: 25px 25px 25px 25px;
+    font-size: 25px;
+    padding-top: 20px;
+    padding-right: 20px;
+}
 
 #bitmoji {
     width: 200px;
