--- a/assets/style.css
+++ b/assets/style.css
@@ -3,20 +3,22 @@ motto
 bitmoji
 hunter
  */
-
+/* Here I was able to set a standard gradient
+variable to use within all of the places I could */
 * {
-    /* display: flex; */
     margin: 0;
     padding: 0;
     font-family: 'Bubblegum Sans', monospace, sans-serif, serif;
-    --UT: #dd6808;
+    --UT: radial-gradient(circle, #dd6808 0%, #f3e309 100%);
+    --creamsicle: #dd6808 #f3e309;
 }
 
 header {
     display: block;
-    background-color: var(--UT);
     width: 100%;
-    height: 75px;}
+    height: 75px;
+    background-image: var(--UT)
+}
 
 header h1 {
     display: flex;
@@ -31,15 +33,6 @@ header h2 {
     margin: 10px 20px;
     text-align: center;
 }
-
-/* nav {
-    float: right;
-    display: flex;
-    font-size: 25px;
-    padding-top: 20px;
-    padding-right: 20px;
-
-} */
 
 nav a.topnav {
     margin-left: 25px;
@@ -58,58 +51,127 @@ nav a.bottnav {
     padding-right: 20px;
 }
 
-.mashed {
+nav.contacts {
+    padding-bottom: 20px;
 }
 
+/* I wanted to use on of my own original pictures that
+I've taken on my trip to downtown Colorado! */
+figure {
+    background-size: 700px;
+    background-image: url("./images/thisistheway.jpg");
+}
+
+/* I was able to use my own bitmoji from the app
+and edit it to be more of an "avatar" headshot! */
 #bitmoji {
     width: 200px;
     border: 25px;
     border-style: groove;
     border-radius: 50%;
-    border-color: var(--UT);
+    border-color: var(--creamsicle);
     display: -webkit-box;
     margin-left: auto;
     margin-right: 30px;
-    margin-top: 40px;
+    margin-top: 0px;
     margin-bottom: 40px;
 }
 
+.row {
+    font-size: 50px;
+    text-align: center;
+    margin: 20px;
+}
+
+.contents {
+    font-size: 30px;
+    text-align: center;
+}
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+/* Was able to reuse the card CSS from one of our
+activities to my advantage for the project
+cards that were necessary! */
+.card {
+    box-shadow: 10px 10px 10px gray;
+    border: solid;
+    border-color: var(--creamsicle);
+    border-width: 30px;
+    border-radius: 25px;
+    padding: 10px;
+    margin: 20px;
+    flex: 0 0 500px;
+    width: 50%;
+  }
+  
+  .card h2 {
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+    padding: 20px;
+    text-align: center;
+
+  }
+  
+  .card p {
+    text-align: center;
+  }
+  
+  .card img {
+    width: 100%;
+  }
+  
+
 footer {
-    display: block;
     text-align: center;
-    position: relative;
-    margin: 40px 40px 40px 40px;
+    margin: 0px 0px 0px 0px;
+    background-image: var(--UT);
 }
 
-#motto {
-    text-align: center;
+h2.motto {
+    margin: 40px 0px 20px 0px ;
+    padding-top: 20px;
 }
 
-/* @media screen and (max-width: 992px) {
+/* I believe I had some issues with the media queries
+but I have since made some adjustments to get everything
+arranged accordingly when resized! */
+@media screen and (max-width: 992px) {
   header {
-    background: #772014;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .card {
     width: 50%;
   }
 
-  .card header {
-    background: #772014;
+  nav {
+    flex-direction: column;
   }
 }
 
 @media screen and (max-width: 768px) {
   header {
-    background: #8ac4ff;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .card {
     width: 100%;
   }
 
-  .card header {
-    background: #8ac4ff;
+  nav {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  Footer {
+    flex-direction: column;
+    justify-content: center;
   }
   
-} */
+}
